; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ofw/extr_ofw_graph.c_ofw_graph_port_get_num_endpoints.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ofw/extr_ofw_graph.c_ofw_graph_port_get_num_endpoints.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"name\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"endpoint\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"endpoint@\00", align 1
@M_OFWPROP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ofw_graph_port_get_num_endpoints(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  store i64 0, i64* %5, align 8
  store i64 0, i64* %5, align 8
  %7 = load i64, i64* %2, align 8
  %8 = call i64 @OF_child(i64 %7)
  store i64 %8, i64* %3, align 8
  br label %9

9:                                                ; preds = %37, %1
  %10 = load i64, i64* %3, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %40

12:                                               ; preds = %9
  %13 = load i64, i64* %3, align 8
  %14 = call i32 @OF_getprop_alloc(i64 %13, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8** %4)
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %6, align 4
  %16 = icmp eq i32 %15, -1
  br i1 %16, label %17, label %18

17:                                               ; preds = %12
  br label %37

18:                                               ; preds = %12
  %19 = load i8*, i8** %4, align 8
  %20 = call i64 @strcmp(i8* %19, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %18
  %23 = load i64, i64* %5, align 8
  %24 = add i64 %23, 1
  store i64 %24, i64* %5, align 8
  br label %33

25:                                               ; preds = %18
  %26 = load i8*, i8** %4, align 8
  %27 = call i64 @strncmp(i8* %26, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i32 9)
  %28 = icmp eq i64 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %25
  %30 = load i64, i64* %5, align 8
  %31 = add i64 %30, 1
  store i64 %31, i64* %5, align 8
  br label %32

32:                                               ; preds = %29, %25
  br label %33

33:                                               ; preds = %32, %22
  %34 = load i8*, i8** %4, align 8
  %35 = load i32, i32* @M_OFWPROP, align 4
  %36 = call i32 @free(i8* %34, i32 %35)
  br label %37

37:                                               ; preds = %33, %17
  %38 = load i64, i64* %3, align 8
  %39 = call i64 @OF_peer(i64 %38)
  store i64 %39, i64* %3, align 8
  br label %9

40:                                               ; preds = %9
  %41 = load i64, i64* %5, align 8
  ret i64 %41
}

declare dso_local i64 @OF_child(i64) #1

declare dso_local i32 @OF_getprop_alloc(i64, i8*, i8**) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i64 @strncmp(i8*, i8*, i32) #1

declare dso_local i32 @free(i8*, i32) #1

declare dso_local i64 @OF_peer(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
